[package]
name = "yfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
bitvec = "1.0.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
fuser = "0.12"
libc = "0.2"
log = "0.4.21"
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = "0.1.18"
